# sysextmgr

./: .gitignore  README.md  meson.build  meson_options.txt
.github/workflows/: ci-opensuse.yml  meson-sanitizer.yml  meson.yml
include/: architecture.h  basics.h  extension-util.h  image-deps.h  log_msg.h  osrelease.h  pager.h  strv.h  sysext-cli.h  sysextmgr.h  tmpfile-util.h
lib/: architecture.c  architecture.h  errno-util.h  extension-util.c  macro.h  pager.c  string-util-fundamental.c  strv.c  tmpfile-util.c  umask-util.h
man/: meson.build  sysextmgr.conf.5.xml  sysextmgrcli.1.xml  sysextmgrd.8.xml
src/: config.c  download.c  download.h  extract.c  extract.h  extrelease.c  extrelease.h  image-deps.c  images-list.c  images-list.h  json-common.c  log_msg.c  log_msg.h  main-check.c  main-cleanup.c  main-install.c  main-list.c  main-tukit-plugin.c  main-update.c  mkosi-manifest.c  newversion.c  osrelease.c  osrelease.h  sysext-cli.c  sysextmgrcli.c  sysextmgrd.c  varlink-client.c  varlink-client.h  varlink-org.openSUSE.sysextmgr.c  varlink-org.openSUSE.sysextmgr.h
tests/: meson.build  tst-create-json1.sh  tst-dump-json1.sh  tst-merge-json1.sh
tests/tst-create-json1.data/expected/: strace-29.1.x86-64.raw.json
tests/tst-create-json1.data/input/: extension-release.k3s-1.31.5+k3s1-29.1.x86-64  extension-release.strace-29.1.x86-64
tests/tst-dump-json1.data/expected/: k3s-1.31.5+k3s1-29.1.x86-64.raw.json.out  strace-29.1.x86-64.raw.json.out  sysext-deps.json.out
tests/tst-dump-json1.data/input/: k3s-1.31.5+k3s1-29.1.x86-64.raw.json
tests/tst-merge-json1.data/expected/: sysext-deps.json
tmpfiles.d/: meson.build  sysextmgr.conf
units/: meson.build  sysextmgr-cleanup.service  sysextmgr-cleanup.timer  sysextmgr.service  sysextmgr.socket
