option('man', type : 'feature', value : 'auto',
       description : 'build and install man pages')
option('sysextstoredir', type : 'string', value : '/var/lib/sysext-store',
       description : 'directory for sysext images')
option('sysextcachemetadir', type : 'string', value : '/var/cache/sysextmgrd/meta',
       description : 'cache directory for sysext meta data')
option('extensionsdir', type : 'string', value : '/etc/extensions',
       description : 'Directory where systemd-sysext looks for images')
option('tukit-plugin', type : 'boolean', value : true,
       description : 'create tukit plugin symlink')
option('tukitplugindir', type : 'string', value : '/usr/lib/tukit/plugins',
       description : 'Directory of plugins for tukit')

